# LMStudio-Chat-Corpus2Skill

./: .env  README.md  config.py  main.py  pyproject.toml  rag.py  rag_config.json  tools_config.json.sample
Function Calling Sample JSON/: Function Calling.json
static/: style.css
templates/: chat.html  debug_rag.html  graph.html  login.html  rag_search.html  skill_tree.html
