[project]
name = "lmstudio-chat-corpus2skill"
version = "0.1.0"
description = "LM Studio server chat web app with Corpus2Skill (hierarchical skill tree RAG)."
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
    "mcp>=1.27.0",
    "openai>=1.0.0",
    "pypdf>=6.10.2",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
